other/add-ttl-jobs/.chainsaw-test/job-not-patched.yaml
---
apiVersion: batch/v1
kind: Job
metadata:
  name: job03
  ownerReferences:
    name: foo-bar
spec:
  ttlSecondsAfterFinished: 900
  template:
    spec:
      containers:
      - name: busybox
        image: ghcr.io/kyverno/test-busybox:1.35
        command: ["sleep", "3600"]
      restartPolicy: Never
  backoffLimit: 4
---
apiVersion: batch/v1
kind: Job
metadata:
  name: job02
spec:
  ttlSecondsAfterFinished: 900
  template:
    spec:
      containers:
      - name: busybox
        image: ghcr.io/kyverno/test-busybox:1.35
        command: ["sleep", "3600"]
      restartPolicy: Never
  backoffLimit: 4
