other/add-ttl-jobs/.chainsaw-test/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: add-ttl-jobs
status:
  ready: true
