other/add-ttl-jobs/.chainsaw-test/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: add-ttl-jobs
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: ../add-ttl-jobs.yaml
    - assert:
        file: policy-ready.yaml
  - name: step-02
    try:
    - apply:
        file: job.yaml
  - name: step-03
    try:
    - assert:
        file: job-patched.yaml
    - error:
        file: job-not-patched.yaml
